DEV-1990: Auto-close inactive tunnels (#181)
